@@ -2,6 +2,7 @@ package magma;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertIterableEquals;
@@ -9,6 +10,6 @@ import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 public class ApplicationTest {
     @Test
     void test() {
-        assertIterableEquals(List.of(1), List.of(1));
+        assertIterableEquals(Collections.emptyList(), Collections.emptyList());
     }
 }
